Fix CSS syntax and layout issues in style.css
Corrected CSS syntax errors and adjusted layout properties.

--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -5,7 +5,7 @@ body {
     background-color: #f4f4f4;
 }
 
-   header{
+header{
     position: fixed;
     background-color: rgb(139, 138, 197);
     top: 0%;
@@ -49,8 +49,7 @@ section#tudo{
 #tudao{
     flex:1;
     padding-right:30px;
-    border-right:2px solid rgba(255,255,255,0.3);
     text-align:left;
     background-color: red;
-    width: 30%;
+    width: 11%;
 }
